src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@keyframes wave {
  0%,
  70%,
  100% {
    transform: rotate(0deg);
  }
  10%,
  30%,
  50% {
    transform: rotate(15deg);
  }
  20%,
  40%,
  60% {
    transform: rotate(-10deg);
  }
}

@keyframes lightGlow {
  0%,
  100% {
    background: linear-gradient(
      to bottom,
      #cfc5ba 0%,
      #fef8e7 30%,
      #cfc5ba 50%,
      #9f958f 70%,
      #706866 100%
    );
    box-shadow: 0 0 2px #9f958f, 0 0 6px rgba(255, 255, 255, 0.3),
      0 0 10px rgba(255, 255, 255, 0.2);
  }
  50% {
    background: linear-gradient(
      to bottom,
      #cfc5ba 0%,
      #fef8e7 30%,
      #cfc5ba 50%,
      #9f958f 70%,
      #706866 100%
    );
    box-shadow: 0 0 4px #9f958f, 0 0 12px rgba(255, 255, 255, 0.5),
      0 0 20px rgba(255, 255, 255, 0.3);
  }
}

@keyframes shadowGlow {
  0%,
  100% {
    background: linear-gradient(
      to bottom,
      #1a1a1a 0%,
      #433f3f 30%,
      #706866 50%,
      #9f958f 70%,
      #cfc5ba 100%
    );
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.05);
  }

  50% {
    background: linear-gradient(
      to bottom,
      #1a1a1a 0%,
      #433f3f 30%,
      #706866 50%,
      #9f958f 70%,
      #cfc5ba 100%
    );
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15), 0 8px 16px rgba(0, 0, 0, 0.08);
  }
}

html {
  display: flex;
  justify-content: center;
  scrollbar-gutter: stable;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.MuiTimelineItem-root::before {
  display: none !important;
  content: none !important;
}

